# Wholesale-supply-distribution

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/core/: config.py  permissions.py  security.py
app/crud/: __init__.py  crud_product_need_request.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  (+6 more)
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  requirements.txt
database/: alembic.ini
frontend/: package.json  tsconfig.json
product_need_request_system/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
product_need_request_system/app/: crud.py  database.py  main.py  models.py  schemas.py  security.py
product_need_request_system/app/routers/: admin.py  auth.py  proposals.py  requests.py  users.py
product_need_request_system/backend/: main.py
product_need_request_system/backend/app/: __init__.py
product_need_request_system/backend/app/api/: __init__.py  deps.py
product_need_request_system/backend/app/api/v1/: __init__.py  api.py
product_need_request_system/backend/app/api/v1/endpoints/: __init__.py  login.py  proposals.py  requests.py  users.py
product_need_request_system/backend/app/core/: __init__.py  celery_app.py  config.py  security.py
product_need_request_system/backend/app/crud/: __init__.py  base.py  crud_proposal.py  crud_request.py  crud_request_status_history.py  crud_role.py  crud_user.py
product_need_request_system/backend/app/db/: __init__.py  session.py
product_need_request_system/backend/app/models/: __init__.py  base.py  enums.py  proposal.py  request.py  request_status_history.py  role.py  user.py
product_need_request_system/backend/app/schemas/: __init__.py  proposal.py  request.py  request_status_history.py  role.py  token.py  user.py
product_need_request_system/backend/app/services/: __init__.py  request_service.py
product_need_request_system/backend/app/tasks/: __init__.py  request_tasks.py
product_need_request_system/celery_worker/: __init__.py  celery_app.py  tasks.py
product_need_request_system/database/migrations/versions/: abef8a211429_initial_schema_setup.py
product_need_request_system/migrations/: env.py
product_need_request_system/migrations/versions/: 2238fd522d60_initial_migration.py
product_need_request_system/tests/: __init__.py  conftest.py  test_proposals.py  test_requests.py  test_users.py  utils.py
product_need_request_system/tests/api/: __init__.py
product_need_request_system/tests/api/v1/: __init__.py  test_login.py  test_requests.py
(+57 files in other folders)
